Closed Bug 170438 Opened 22 years ago Closed 22 years ago

Crash opening cert manager

Categories

(Core Graveyard :: Security: UI, defect)

Other Branch
x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: KaiE, Assigned: KaiE)

Details

Attachments

(1 file)

Regression from bug 169932. Open certificate manager => crash The reasons is a struct that previously contained a plain PRUnichar*. I changed that to nsString, not noticing the struct is allocated using nsMemory::Alloc (sigh), and therefore no constructors are getting called. It doesn't make sense to allocate that struct using nsMemory::Alloc. It is only being used internally. At least I hope it doesn't make sense. I'm coming up with a patch that no longer uses nsMemory::Alloc, but C++ new/delete.
Attached patch Patch v1Splinter Review
Comment on attachment 100349 [details] [diff] [review] Patch v1 r=javi
Attachment #100349 - Flags: review+
Comment on attachment 100349 [details] [diff] [review] Patch v1 sr=alecf
Attachment #100349 - Flags: superreview+
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verified.
Status: RESOLVED → VERIFIED
Product: PSM → Core
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: