b=170438 Crash opening cert manager r=javi sr=alecf